--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^5.1.2",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.18.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
